<resources>
    <string name="app_name">Mera Jobs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_error">Server Error!</string>
    <string name="no_internet">Check  your internet connection</string>
    <string name="fill_name">Name field can\'t be empty!</string>
    <string name="fill_email">Email field can\'t be empty!</string>
    <string name="fill_valid_email">Please enter the valid email</string>
    <string name="fill_valid_email_phone">Please enter valid email/Mobile Number</string>
    <string name="fill_phone">Mobile Number Number field can\'t be empty!</string>
    <string name="fill_location">Location field can\'t be empty!</string>
    <string name="fill_area_practice">Please Select Area of practice</string>
    <string name="fill_registration_number">Registration Number field can\'t be empty!</string>
    <string name="fill_about">About field can\'t be empty!</string>
    <string name="fill_valid_phone">Please enter the valid Mobile Number</string>
    <string name="fill_password">Password field can\'t be empty!</string>
    <string name="password_validation_text">Enter at Least 1 number, 1 alphabet and 1 special character..</string>
    <string name="confirm_password_validation_text">Password and confirm password is not match</string>
    <string name="new_confirm_password_validation_text">New Password and confirm password is not match</string>
    <string name="fill_message">Message field can\'t be empty!</string>
    <string name="accept_term_condition">"Please accept the terms and condition"</string>
    <string name="fill_otp">OTP field can\'t be empty!</string>
    <string name="fill_complete_otp">Enter Correct OTP</string>
    <string name="fill_new_password">New Password field can\'t be empty!</string>
    <string name="fill_confirm_new_password">Confirm New Password field can\'t be empty!</string>
    <string name="password_not_match">Password can\'t match</string>
    <string name="otp_Send">Otp Send Successfully</string>
    <string name="user_type_not_found">User Type Not Found</string>
    <string name="valid_card_number">Please Enter valid card number</string>
    <string name="valid_card_type">Please enter details of valid card</string>
    <string name="valid_expireDate">Please enter valid expiration date</string>
    <string name="valid_cvv">Please enter valid CVV Code</string>
    <string name="userType_not_found">We are not found your user type . Please Try Again!</string>
    <string name="successfully">Your account has been created\n successfully.</string>
    <string name="password_change">Your password has been changed successfully.</string>
    <string name="onBoardHead1">The Fastest Way to Find Your <font color="#2B4CD2">Dream Job</font></string>
    <string name="onBoardHead2">The Intelligent Job <font color="#2B4CD2">Search &amp; Posting </font>App</string>
    <string name="onBoardHead3">TFind Your Ideal Job <font color="#2B4CD2">Right Here!</font></string>
    <string name="onBoardHeadDescription1">How can social media job posts help your recruitment process? We can name several ways, including reaching a broader spectrum.</string>
    <string name="onBoardHeadDescription2">Take a look below for ideas of what to include in your social media job post, and tips to make your vacancy content authentic. </string>
    <string name="onBoardHeadDescription3">There are many ways to promote an open job position on social media. But let’s first go over the basic content elements to include.</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_Jobfly">Hello Jobfly!</string>
    <string name="choose_head">Connect, Apply, Succeed</string>
    <string name="sign_in_with_phone">Sign in with Mobile Number</string>
    <string name="continue_with_linkedIn">Continue with LinkedIn</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="logIn">Login</string>
    <string name="email_address">Email Address<font color="#EE1D1D"> *</font></string>
    <string name="new_email_address">New Email Address<font color="#EE1D1D"> *</font></string>
    <string name="mobile_number">Mobile Number<font color="#EE1D1D"> *</font></string>
    <string name="new_mobile_number">New Mobile Number<font color="#EE1D1D"> *</font></string>
    <string name="fullName">Full Name<font color="#EE1D1D"> *</font></string>
    <string name="companyName">Company Name<font color="#EE1D1D"> *</font></string>
    <string name="password">Password<font color="#EE1D1D"> *</font></string>
    <string name="login_as">Login As<font color="#EE1D1D"> *</font></string>
    <string name="register_as">Register As<font color="#EE1D1D"> *</font></string>
    <string name="userType">User Type<font color="#EE1D1D"> *</font></string>
    <string name="password1">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password<font color="#EE1D1D"> *</font></string>
    <string name="confirm_new_password">Confirm New Password<font color="#EE1D1D"> *</font></string>
    <string name="privacy_policy_line">Continuing Accept Our <font color="#3C65F5">Privacy Policy</font></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="all_ready_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="account_verification">Account Verification</string>
    <string name="email_verify_type_your_code">Email Verification OTP<font color="#EE1D1D"> *</font></string>
    <string name="continue1">Continue</string>
    <string name="mobile_verify_type_your_code">Mobile Number Verification OTP<font color="#EE1D1D"> *</font></string>
    <string name="enter_your_8_digit_code">Enter your 8 digit code</string>
    <string name="don_t_received_your_code">Don’t received your code?</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="forgotPasswordHead">An OTP will be sent to your mobile number entered below</string>
    <string name="don_t_received_email_resend">Don’t received email? <font color="#3C65F5">Resend</font></string>
    <string name="need_help_contact_our_support_team">Need help? <font color="#3C65F5">Contact our support team</font></string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name<font color="#EE1D1D"> *</font></string>
    <string name="location">Location<font color="#EE1D1D"> *</font></string>
    <string name="date_of_birth">Date of Birth<font color="#EE1D1D"> *</font></string>
    <string name="gender">Gender<font color="#EE1D1D"> *</font></string>
    <string name="new_password">New Password<font color="#EE1D1D"> *</font></string>
    <string name="old_password">Current Password<font color="#EE1D1D"> *</font></string>
    <string name="merajobs">MERA<font color="#F04801">JOBS</font></string>
    <string name="enter_6_digit_otp">Enter 6 digit OTP</string>
    <string name="resend">Resend</string>
    <string name="continueText">Continue</string>
    <string name="create_new_password">Create new password</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="joining_date_in_year">Joining Date<font color="#EE1D1D"> *</font></string>
    <string name="joining_date_in_month">Joining Date in Month<font color="#EE1D1D"> *</font></string>
    <string name="employment_type">Employment Type<font color="#EE1D1D"> *</font></string>
    <string name="exit_year">Exit Date<font color="#EE1D1D"> *</font></string>
    <string name="exit_month">Exit Month<font color="#EE1D1D"> *</font></string>
    <string name="currently_job_title">Job Title<font color="#EE1D1D"> *</font></string>
    <string name="current_company_name">Company Name<font color="#EE1D1D"> *</font></string>
    <string name="current_salary">Current Salary<font color="#EE1D1D"> *</font></string>
    <string name="job_profile">Job Profile<font color="#EE1D1D"> *</font></string>
    <string name="skills">Skills<font color="#EE1D1D"> *</font></string>
    <string name="qualification">Qualification<font color="#EE1D1D"> *</font></string>
    <string name="course_type">Course Type<font color="#EE1D1D"> *</font></string>
    <string name="course">Course<font color="#EE1D1D"> *</font></string>
    <string name="duration">Duration<font color="#EE1D1D"> *</font></string>
    <string name="specialization">Specialization<font color="#EE1D1D"> *</font></string>
    <string name="specialization1">Specialization</string>
    <string name="grading_system">Grading System<font color="#EE1D1D"> *</font></string>
    <string name="select_university_institutes">Select University/Institutes<font color="#EE1D1D"> *</font></string>
    <string name="grade">Grade<font color="#EE1D1D"> *</font></string>
    <string name="skill_software_name">Skill/Software Name<font color="#EE1D1D"> *</font></string>
    <string name="software_version">Software Version<font color="#EE1D1D"> *</font></string>
    <string name="last_used">Last Used<font color="#EE1D1D"> *</font></string>
    <string name="experience">Experience<font color="#EE1D1D"> *</font></string>
    <string name="experience1">Experience</string>
    <string name="experience_in_years">Experience In Years<font color="#EE1D1D"> *</font></string>
    <string name="experience_in_months">Experience In Months<font color="#EE1D1D"> *</font></string>
    <string name="language">Language<font color="#EE1D1D"> *</font></string>
    <string name="language1">Language</string>
    <string name="proficiency">Proficiency<font color="#EE1D1D"> *</font></string>
    <string name="read">Read<font color="#EE1D1D"> *</font></string>
    <string name="write">Write<font color="#EE1D1D"> *</font></string>
    <string name="speak">Speak<font color="#EE1D1D"> *</font></string>
    <string name="read1">Read</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="url">URL<font color="#EE1D1D"> *</font></string>
    <string name="description">Description</string>
    <string name="title">Title<font color="#EE1D1D"> *</font></string>
    <string name="published_date">Published Date<font color="#EE1D1D"> *</font></string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure_you_want_to_leave">Are you sure you want to leave?</string>
    <string name="white_paper_research_publication_journal_entry">White Paper / Research Publication / Journal Entry</string>
    <string name="add_links_to_your_online_publications">Add links to your online publications</string>
    <string name="notification">Notification</string>
    <string name="email_push_notifications"><![CDATA[Email & Push Notifications]]></string>
    <string name="career_tips_notification">Career Tips Notification</string>
    <string name="job_looking_status">Job Looking Status</string>
    <string name="recommended_job_notification">Recommended Job Notification</string>
    <string name="job_alert_notification">Job Alert Notification</string>
    <string name="application_status_notification">Application Status Notification</string>
    <string name="profile_view_notification">Profile View Notification</string>
    <string name="profile_strength_notification">Profile Strength Notification</string>
    <string name="profile_visibility">Profile Visibility</string>
    <string name="whatsapp_notification_enabled">WhatsApp Notification Enabled</string>
    <string name="promotions_notification">Promotions Notification</string>
</resources>