<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".fragment.setting.NotificationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_img"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fixedHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/btBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/btn_back_circle_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvPageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/notification"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                 app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/email_push_notifications"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/_15sdp" />

            <CheckBox
                android:id="@+id/careerTipsNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_10sdp"
                android:fontFamily="@font/medium"
                android:text="@string/career_tips_notification"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/_12sdp" />

            <CheckBox
                android:id="@+id/jobLookingStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/job_looking_status"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/_12sdp" />


            <CheckBox
                android:id="@+id/recommendedJobNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:text="@string/recommended_job_notification"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/_12sdp" />


            <CheckBox
                android:id="@+id/jobAlertNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:text="@string/job_alert_notification"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/_12sdp" />


            <CheckBox
                android:id="@+id/applicationStatusNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/application_status_notification"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/_12sdp" />


            <CheckBox
                android:id="@+id/profileViewNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/profile_view_notification"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/_12sdp" />




            <CheckBox
                android:id="@+id/profileStrengthNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:text="@string/profile_strength_notification"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/_12sdp" />


            <CheckBox
                android:id="@+id/profileVisibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:text="@string/profile_visibility"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/_12sdp" />


            <CheckBox
                android:id="@+id/whatsappNotificationEnabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_10sdp"
                android:fontFamily="@font/medium"
                android:text="@string/whatsapp_notification_enabled"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/_12sdp" />

            <CheckBox
                android:id="@+id/promotionsNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:text="@string/promotions_notification"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/btSaveNotificationSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:background="@drawable/blue_button"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/tvProgressBar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:indeterminateTint="@color/mainColor"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>