<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_white_layout"
    tools:context=".fragment.findJobScreens.myProfile.accomplishment.BottomSheetWhitePaperEditDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/btCloseFilter"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:src="@drawable/image_cross" />

        <View
            android:id="@+id/ViewOrange"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_5sdp"
            android:layout_gravity="center"
            android:background="@color/mainColor" />

        <TextView
            android:id="@+id/TextFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/semibold"
            android:text="@string/white_paper_research_publication_journal_entry"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:gravity="center"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/add_links_to_your_online_publications"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/medium"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/title"
            android:textColor="@color/lightTextColor" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            style="@style/editBoxTextSize"
            android:background="@drawable/editext_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_10sdp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/medium"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/url"
            android:textColor="@color/lightTextColor" />

        <EditText
            android:id="@+id/etURL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:hint="http://www.example.com"
            android:background="@drawable/editext_bg"
            style="@style/editBoxTextSize"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_10sdp" />

        <TextView
            android:id="@+id/lableExitYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/medium"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/published_date"
            android:textColor="@color/lightTextColor" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tvPublishDate"
            android:layout_width="match_parent"
            android:background="@drawable/editext_bg"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/etPublishDate"
                style="@style/editBoxTextSize"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:gravity="center_vertical"
                android:hint="@string/yyyy_mm_dd"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingLeft="@dimen/_10sdp" />

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/calender_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/medium"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/description"
            android:textColor="@color/lightTextColor" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            style="@style/editBoxTextSize"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/editext_bg"
            android:gravity="top"
            android:minHeight="@dimen/_80sdp"
            android:paddingVertical="@dimen/_2sdp"
            android:paddingLeft="@dimen/_10sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/btnClose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/red_button"
                    android:fontFamily="@font/semibold"
                    android:gravity="center"
                    android:text="@string/close"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/btnSaveChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/blue_button"
                    android:fontFamily="@font/semibold"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>